# fStringFormat

./: LICENSE  README.md  pyproject.toml
src/: fStringFormat
